--- a/numpypandasassignments/pandasasssignments.ipynb
+++ b/numpypandasassignments/pandasasssignments.ipynb
@@ -68,12 +68,12 @@
      "text": [
       "     B   C   D\n",
       "A             \n",
-      "52  68  41  57\n",
-      "81  83   1  62\n",
-      "59  77  89  27\n",
-      "18   5  74  67\n",
-      "90  11  22  82\n",
-      "50  70  86  87\n"
+      "66  85  21  26\n",
+      "50  24  72  17\n",
+      "55  67  26  80\n",
+      "67   7  20  29\n",
+      "72  97  88  25\n",
+      "92  32  38  41\n"
      ]
     }
    ],
@@ -129,21 +129,21 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>X</th>\n",
-       "      <td>9</td>\n",
-       "      <td>8</td>\n",
-       "      <td>9</td>\n",
+       "      <td>5</td>\n",
+       "      <td>4</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Y</th>\n",
+       "      <td>5</td>\n",
+       "      <td>3</td>\n",
        "      <td>4</td>\n",
-       "      <td>7</td>\n",
-       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Z</th>\n",
        "      <td>9</td>\n",
+       "      <td>6</td>\n",
        "      <td>9</td>\n",
-       "      <td>2</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,9 +151,9 @@
       ],
       "text/plain": [
        "   A  B  C\n",
-       "X  9  8  9\n",
-       "Y  4  7  6\n",
-       "Z  9  9  2"
+       "X  5  4  5\n",
+       "Y  5  3  4\n",
+       "Z  9  6  9"
       ]
      },
      "execution_count": 2,
@@ -179,21 +179,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    A   B   C\n",
-      "0   7  16   5\n",
-      "1  12  10  13\n",
-      "2   9   9   6\n",
-      "3  13  18   8 \n",
+      "    A  B   C\n",
+      "0  16  1   5\n",
+      "1   9  6  13\n",
+      "2   8  3  11\n",
+      "3  18  2  14 \n",
       "\n",
       "Column Sum \n",
-      " A    41\n",
-      "B    53\n",
-      "C    32\n",
+      " A    51\n",
+      "B    12\n",
+      "C    43\n",
       "dtype: int64 Row Sum \n",
-      " 0    28\n",
-      "1    35\n",
-      "2    24\n",
-      "3    39\n",
+      " 0    22\n",
+      "1    28\n",
+      "2    22\n",
+      "3    34\n",
       "dtype: int64\n"
      ]
     }
@@ -222,14 +222,14 @@
      "output_type": "stream",
      "text": [
       "      A     B     C\n",
-      "0  31.0   NaN  17.0\n",
-      "1  12.0  82.0  95.0\n",
-      "2  30.0   NaN   NaN\n",
-      "3   NaN   4.0   7.0\n",
-      "4  51.0  11.0  58.0\n",
-      "A    31.000000\n",
-      "B    32.333333\n",
-      "C    44.250000\n",
+      "0  75.0   NaN  32.0\n",
+      "1  88.0  44.0  69.0\n",
+      "2   1.0   NaN   NaN\n",
+      "3   NaN   9.0  20.0\n",
+      "4  43.0  56.0  12.0\n",
+      "A    51.750000\n",
+      "B    36.333333\n",
+      "C    33.250000\n",
       "dtype: float64\n"
      ]
     },
@@ -262,45 +262,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>31.0</td>\n",
-       "      <td>32.333333</td>\n",
-       "      <td>17.00</td>\n",
+       "      <td>75.00</td>\n",
+       "      <td>36.333333</td>\n",
+       "      <td>32.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>12.0</td>\n",
-       "      <td>82.000000</td>\n",
-       "      <td>95.00</td>\n",
+       "      <td>88.00</td>\n",
+       "      <td>44.000000</td>\n",
+       "      <td>69.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>30.0</td>\n",
-       "      <td>32.333333</td>\n",
-       "      <td>44.25</td>\n",
+       "      <td>1.00</td>\n",
+       "      <td>36.333333</td>\n",
+       "      <td>33.25</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>31.0</td>\n",
-       "      <td>4.000000</td>\n",
-       "      <td>7.00</td>\n",
+       "      <td>51.75</td>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>20.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>51.0</td>\n",
-       "      <td>11.000000</td>\n",
-       "      <td>58.00</td>\n",
+       "      <td>43.00</td>\n",
+       "      <td>56.000000</td>\n",
+       "      <td>12.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      A          B      C\n",
-       "0  31.0  32.333333  17.00\n",
-       "1  12.0  82.000000  95.00\n",
-       "2  30.0  32.333333  44.25\n",
-       "3  31.0   4.000000   7.00\n",
-       "4  51.0  11.000000  58.00"
+       "       A          B      C\n",
+       "0  75.00  36.333333  32.00\n",
+       "1  88.00  44.000000  69.00\n",
+       "2   1.00  36.333333  33.25\n",
+       "3  51.75   9.000000  20.00\n",
+       "4  43.00  56.000000  12.00"
       ]
      },
      "execution_count": 4,
@@ -365,17 +365,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>41</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>16.0</td>\n",
-       "      <td>64.0</td>\n",
+       "      <td>97</td>\n",
+       "      <td>5.0</td>\n",
+       "      <td>79.0</td>\n",
+       "      <td>9.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>7</td>\n",
-       "      <td>42.0</td>\n",
-       "      <td>29.0</td>\n",
-       "      <td>58.0</td>\n",
+       "      <td>89</td>\n",
+       "      <td>51.0</td>\n",
+       "      <td>71.0</td>\n",
+       "      <td>92.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -383,8 +383,8 @@
       ],
       "text/plain": [
        "    A     B     C     D\n",
-       "0  41  53.0  16.0  64.0\n",
-       "5   7  42.0  29.0  58.0"
+       "0  97   5.0  79.0   9.0\n",
+       "5  89  51.0  71.0  92.0"
       ]
      },
      "execution_count": 5,
@@ -538,7 +538,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 8,
    "id": "54df67b3",
    "metadata": {},
    "outputs": [
@@ -546,21 +546,21 @@
      "data": {
       "text/plain": [
        "date\n",
-       "2025-07-14 09:00:17.999974    74.0\n",
-       "2025-07-15 09:00:17.999974    49.0\n",
-       "2025-07-16 09:00:17.999974    80.0\n",
-       "2025-07-17 09:00:17.999974    37.0\n",
-       "2025-07-18 09:00:17.999974    65.0\n",
+       "2025-07-16 08:49:53.062269    81.0\n",
+       "2025-07-17 08:49:53.062269    46.0\n",
+       "2025-07-18 08:49:53.062269     4.0\n",
+       "2025-07-19 08:49:53.062269    23.0\n",
+       "2025-07-20 08:49:53.062269    52.0\n",
        "                              ... \n",
-       "2026-08-14 09:00:17.999974    77.0\n",
-       "2026-08-15 09:00:17.999974    21.0\n",
-       "2026-08-16 09:00:17.999974    70.0\n",
-       "2026-08-17 09:00:17.999974    22.0\n",
-       "2026-08-18 09:00:17.999974    80.0\n",
+       "2026-08-16 08:49:53.062269    34.0\n",
+       "2026-08-17 08:49:53.062269    48.0\n",
+       "2026-08-18 08:49:53.062269    22.0\n",
+       "2026-08-19 08:49:53.062269    81.0\n",
+       "2026-08-20 08:49:53.062269    89.0\n",
        "Name: numbers, Length: 401, dtype: float64"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -585,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 9,
    "id": "c058d3eb",
    "metadata": {},
    "outputs": [
@@ -599,15 +599,15 @@
        "2021-01-04     NaN\n",
        "2021-01-05     NaN\n",
        "              ... \n",
-       "2021-12-27    81.0\n",
-       "2021-12-28    81.0\n",
-       "2021-12-29    81.0\n",
-       "2021-12-30    84.0\n",
-       "2021-12-31    84.0\n",
+       "2021-12-27    91.0\n",
+       "2021-12-28    91.0\n",
+       "2021-12-29    89.0\n",
+       "2021-12-30    89.0\n",
+       "2021-12-31    89.0\n",
        "Name: numbers, Length: 365, dtype: float64"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,8 +629,61 @@
    "execution_count": null,
    "id": "f60ebd16",
    "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<itertools.product object at 0x71ceeaec8640>\n"
+     ]
+    },
+    {
+     "ename": "SyntaxError",
+     "evalue": "'return' outside function (414684973.py, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Cell \u001b[0;32mIn[28], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    return\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 7: MultiIndex DataFrame\n",
+    "\n",
+    "# 1. Create a Pandas DataFrame with a MultiIndex (hierarchical index). Perform some basic indexing and slicing operations on the MultiIndex DataFrame.\n",
+    "from itertools import product\n",
+    "\n",
+    "regions = ['UP', 'MP', 'DL']\n",
+    "years = ['2020', '2021', '2022']\n",
+    "# test = list(zip(regions, years))\n",
+    "# test\n",
+    "print(product(regions, years))\n",
+    "# return\n",
+    "index = pd.MultiIndex.from_tuples(\n",
+    "    list(product(regions, years)),\n",
+    "    names=['Region', 'Year']\n",
+    ")\n",
+    "df = pd.DataFrame(\n",
+    "    np.random.randint(1, 100, size=(9, 3)),\n",
+    "    index=index,\n",
+    "    columns=['Value1', 'Value2', 'Value3']\n",
+    ")\n",
+    "print(df)\n",
+    "print(df.loc['UP'], '\\n')\n",
+    "# print(df.xs('2020', level='Years'))\n",
+    "# Get specific cell: DL in 2022, column Value1 \n",
+    "# print(df.loc[('DL', '2022'), 'Value1'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d5204d38",
+   "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# 2. Create a Pandas DataFrame with MultiIndex consisting of 'Category' and 'SubCategory'. Fill the DataFrame with random data and compute the sum of values for each 'Category' and 'SubCategory'."
+   ]
   }
  ],
  "metadata": {
