--- a/numpypandasassignments/pandasasssignments.ipynb
+++ b/numpypandasassignments/pandasasssignments.ipynb
@@ -68,12 +68,12 @@
      "text": [
       "     B   C   D\n",
       "A             \n",
-      "66  85  21  26\n",
-      "50  24  72  17\n",
-      "55  67  26  80\n",
-      "67   7  20  29\n",
-      "72  97  88  25\n",
-      "92  32  38  41\n"
+      "64  35   5  53\n",
+      "61  46  57   4\n",
+      "97  62  66   6\n",
+      "13  70  86  89\n",
+      "28  23  37  79\n",
+      "31  48  54  60\n"
      ]
     }
    ],
@@ -130,20 +130,20 @@
        "    <tr>\n",
        "      <th>X</th>\n",
        "      <td>5</td>\n",
-       "      <td>4</td>\n",
-       "      <td>5</td>\n",
+       "      <td>8</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Y</th>\n",
-       "      <td>5</td>\n",
-       "      <td>3</td>\n",
-       "      <td>4</td>\n",
+       "      <td>2</td>\n",
+       "      <td>9</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>Z</th>\n",
-       "      <td>9</td>\n",
-       "      <td>6</td>\n",
-       "      <td>9</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>7</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -151,9 +151,9 @@
       ],
       "text/plain": [
        "   A  B  C\n",
-       "X  5  4  5\n",
-       "Y  5  3  4\n",
-       "Z  9  6  9"
+       "X  5  8  7\n",
+       "Y  2  9  7\n",
+       "Z  1  2  7"
       ]
      },
      "execution_count": 2,
@@ -179,21 +179,21 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "    A  B   C\n",
-      "0  16  1   5\n",
-      "1   9  6  13\n",
-      "2   8  3  11\n",
-      "3  18  2  14 \n",
+      "    A   B   C\n",
+      "0  15  14  19\n",
+      "1   3  16  13\n",
+      "2   7  14   5\n",
+      "3  16  12   7 \n",
       "\n",
       "Column Sum \n",
-      " A    51\n",
-      "B    12\n",
-      "C    43\n",
+      " A    41\n",
+      "B    56\n",
+      "C    44\n",
       "dtype: int64 Row Sum \n",
-      " 0    22\n",
-      "1    28\n",
-      "2    22\n",
-      "3    34\n",
+      " 0    48\n",
+      "1    32\n",
+      "2    26\n",
+      "3    35\n",
       "dtype: int64\n"
      ]
     }
@@ -222,14 +222,14 @@
      "output_type": "stream",
      "text": [
       "      A     B     C\n",
-      "0  75.0   NaN  32.0\n",
-      "1  88.0  44.0  69.0\n",
-      "2   1.0   NaN   NaN\n",
-      "3   NaN   9.0  20.0\n",
-      "4  43.0  56.0  12.0\n",
-      "A    51.750000\n",
-      "B    36.333333\n",
-      "C    33.250000\n",
+      "0  59.0   NaN  16.0\n",
+      "1  18.0  62.0  53.0\n",
+      "2  70.0   NaN   NaN\n",
+      "3   NaN  23.0  81.0\n",
+      "4  91.0  32.0  41.0\n",
+      "A    59.50\n",
+      "B    39.00\n",
+      "C    47.75\n",
       "dtype: float64\n"
      ]
     },
@@ -262,45 +262,45 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>75.00</td>\n",
-       "      <td>36.333333</td>\n",
-       "      <td>32.00</td>\n",
+       "      <td>59.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>16.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
-       "      <td>88.00</td>\n",
-       "      <td>44.000000</td>\n",
-       "      <td>69.00</td>\n",
+       "      <td>18.0</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>53.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
-       "      <td>1.00</td>\n",
-       "      <td>36.333333</td>\n",
-       "      <td>33.25</td>\n",
+       "      <td>70.0</td>\n",
+       "      <td>39.0</td>\n",
+       "      <td>47.75</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>51.75</td>\n",
-       "      <td>9.000000</td>\n",
-       "      <td>20.00</td>\n",
+       "      <td>59.5</td>\n",
+       "      <td>23.0</td>\n",
+       "      <td>81.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>43.00</td>\n",
-       "      <td>56.000000</td>\n",
-       "      <td>12.00</td>\n",
+       "      <td>91.0</td>\n",
+       "      <td>32.0</td>\n",
+       "      <td>41.00</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "       A          B      C\n",
-       "0  75.00  36.333333  32.00\n",
-       "1  88.00  44.000000  69.00\n",
-       "2   1.00  36.333333  33.25\n",
-       "3  51.75   9.000000  20.00\n",
-       "4  43.00  56.000000  12.00"
+       "      A     B      C\n",
+       "0  59.0  39.0  16.00\n",
+       "1  18.0  62.0  53.00\n",
+       "2  70.0  39.0  47.75\n",
+       "3  59.5  23.0  81.00\n",
+       "4  91.0  32.0  41.00"
       ]
      },
      "execution_count": 4,
@@ -365,17 +365,17 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>0</th>\n",
-       "      <td>97</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>79.0</td>\n",
-       "      <td>9.0</td>\n",
+       "      <td>63</td>\n",
+       "      <td>24.0</td>\n",
+       "      <td>94.0</td>\n",
+       "      <td>92.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>89</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>71.0</td>\n",
-       "      <td>92.0</td>\n",
+       "      <td>90</td>\n",
+       "      <td>63.0</td>\n",
+       "      <td>15.0</td>\n",
+       "      <td>26.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -383,8 +383,8 @@
       ],
       "text/plain": [
        "    A     B     C     D\n",
-       "0  97   5.0  79.0   9.0\n",
-       "5  89  51.0  71.0  92.0"
+       "0  63  24.0  94.0  92.0\n",
+       "5  90  63.0  15.0  26.0"
       ]
      },
      "execution_count": 5,
@@ -546,17 +546,17 @@
      "data": {
       "text/plain": [
        "date\n",
-       "2025-07-16 08:49:53.062269    81.0\n",
-       "2025-07-17 08:49:53.062269    46.0\n",
-       "2025-07-18 08:49:53.062269     4.0\n",
-       "2025-07-19 08:49:53.062269    23.0\n",
-       "2025-07-20 08:49:53.062269    52.0\n",
+       "2025-07-17 08:43:40.008699    59.0\n",
+       "2025-07-18 08:43:40.008699    93.0\n",
+       "2025-07-19 08:43:40.008699    76.0\n",
+       "2025-07-20 08:43:40.008699    39.0\n",
+       "2025-07-21 08:43:40.008699    13.0\n",
        "                              ... \n",
-       "2026-08-16 08:49:53.062269    34.0\n",
-       "2026-08-17 08:49:53.062269    48.0\n",
-       "2026-08-18 08:49:53.062269    22.0\n",
-       "2026-08-19 08:49:53.062269    81.0\n",
-       "2026-08-20 08:49:53.062269    89.0\n",
+       "2026-08-17 08:43:40.008699    26.0\n",
+       "2026-08-18 08:43:40.008699    62.0\n",
+       "2026-08-19 08:43:40.008699    62.0\n",
+       "2026-08-20 08:43:40.008699     4.0\n",
+       "2026-08-21 08:43:40.008699     8.0\n",
        "Name: numbers, Length: 401, dtype: float64"
       ]
      },
@@ -599,11 +599,11 @@
        "2021-01-04     NaN\n",
        "2021-01-05     NaN\n",
        "              ... \n",
-       "2021-12-27    91.0\n",
-       "2021-12-28    91.0\n",
-       "2021-12-29    89.0\n",
-       "2021-12-30    89.0\n",
-       "2021-12-31    89.0\n",
+       "2021-12-27    86.0\n",
+       "2021-12-28    59.0\n",
+       "2021-12-29    87.0\n",
+       "2021-12-30    87.0\n",
+       "2021-12-31    87.0\n",
        "Name: numbers, Length: 365, dtype: float64"
       ]
      },
@@ -626,7 +626,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "f60ebd16",
    "metadata": {},
    "outputs": [
@@ -634,15 +634,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<itertools.product object at 0x71ceeaec8640>\n"
-     ]
-    },
-    {
-     "ename": "SyntaxError",
-     "evalue": "'return' outside function (414684973.py, line 11)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  Cell \u001b[0;32mIn[28], line 11\u001b[0;36m\u001b[0m\n\u001b[0;31m    return\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m 'return' outside function\n"
+      "             Value1  Value2  Value3\n",
+      "Region Year                        \n",
+      "UP     2020      66      42      61\n",
+      "       2021      39       3      95\n",
+      "       2022      86      88      39\n",
+      "MP     2020      83      33       4\n",
+      "       2021      93      11      31\n",
+      "       2022      59      19      44\n",
+      "DL     2020       6      88      40\n",
+      "       2021      44      88       7\n",
+      "       2022      56      14      30\n",
+      "      Value1  Value2  Value3\n",
+      "Year                        \n",
+      "2020      66      42      61\n",
+      "2021      39       3      95\n",
+      "2022      86      88      39 \n",
+      "\n",
+      "59\n"
      ]
     }
    ],
@@ -656,8 +665,6 @@
     "years = ['2020', '2021', '2022']\n",
     "# test = list(zip(regions, years))\n",
     "# test\n",
-    "print(product(regions, years))\n",
-    "# return\n",
     "index = pd.MultiIndex.from_tuples(\n",
     "    list(product(regions, years)),\n",
     "    names=['Region', 'Year']\n",
@@ -671,19 +678,234 @@
     "print(df.loc['UP'], '\\n')\n",
     "# print(df.xs('2020', level='Years'))\n",
     "# Get specific cell: DL in 2022, column Value1 \n",
-    "# print(df.loc[('DL', '2022'), 'Value1'])\n",
+    "print(df.loc[('MP', '2022'), 'Value1'])\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "d5204d38",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "MultiIndex DataFrame:\n",
+      "                       Sales_A  Sales_B\n",
+      "Category SubCategory                  \n",
+      "Clothing Jeans             55       52\n",
+      "         T-Shirt           97       80\n",
+      "         Top               66       46\n",
+      "Footwear Shoe              94       13\n",
+      "         Socks             43       56\n",
+      "Clothing Jeans             70       46\n",
+      "         T-Shirt           71       77\n",
+      "         Top               75       23\n",
+      "Footwear Shoe              70       34\n",
+      "         Socks             75       84\n",
+      "\n",
+      "🔹 Sum by Category:\n",
+      "           Sales_A  Sales_B\n",
+      "Category                  \n",
+      "Clothing      434      324\n",
+      "Footwear      282      187\n",
+      "\n",
+      "🔹 Sum by SubCategory:\n",
+      "              Sales_A  Sales_B\n",
+      "SubCategory                  \n",
+      "Jeans            125       98\n",
+      "Shoe             164       47\n",
+      "Socks            118      140\n",
+      "T-Shirt          168      157\n",
+      "Top              141       69\n"
+     ]
+    }
+   ],
    "source": [
-    "# 2. Create a Pandas DataFrame with MultiIndex consisting of 'Category' and 'SubCategory'. Fill the DataFrame with random data and compute the sum of values for each 'Category' and 'SubCategory'."
+    "# 2. Create a Pandas DataFrame with MultiIndex consisting of 'Category' and 'SubCategory'. Fill the DataFrame with random data and compute the sum of values for each 'Category' and 'SubCategory'.\n",
+    "# Define actual categories and subcategories\n",
+    "categories = ['Clothing', 'Footwear']\n",
+    "subcategories = ['Jeans', 'T-Shirt', 'Top', 'Shoe', 'Socks']\n",
+    "multi_index = pd.MultiIndex.from_tuples(\n",
+    "    [('Clothing', 'Jeans'), \n",
+    "     ('Clothing', 'T-Shirt'),\n",
+    "     ('Clothing', 'Top'),\n",
+    "     ('Footwear', 'Shoe'),\n",
+    "     ('Footwear', 'Socks')] * 2,  # 2 entries for each pair\n",
+    "    names=['Category', 'SubCategory']\n",
+    ")\n",
+    "\n",
+    "# Create DataFrame\n",
+    "df = pd.DataFrame(\n",
+    "    np.random.randint(1, 100, size=(10, 2)),\n",
+    "    index=multi_index,\n",
+    "    columns=['Sales_A', 'Sales_B']\n",
+    ")\n",
+    "\n",
+    "# Display DataFrame\n",
+    "print(\"MultiIndex DataFrame:\\n\", df)\n",
+    "\n",
+    "# Sum by Category\n",
+    "print(\"\\n🔹 Sum by Category:\\n\", df.groupby(level='Category').sum())\n",
+    "\n",
+    "# Sum by SubCategory\n",
+    "print(\"\\n🔹 Sum by SubCategory:\\n\", df.groupby(level='SubCategory').sum())\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "198bccd0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Pivot table with sum of Category wise \n",
+      " Category      A    B   C\n",
+      "Date                    \n",
+      "2025-07-01    0   75  12\n",
+      "2025-07-03  165  160   0\n",
+      "2025-07-04   88   94   0\n",
+      "2025-07-06    0    5  93\n",
+      "2025-07-07    0   10  26\n",
+      "2025-07-08   95    0   0\n",
+      "2025-07-09  212    0  68\n",
+      "2025-07-10    0   55   0\n"
+     ]
+    }
+   ],
+   "source": [
+    "### Assignment 8: Pivot Tables\n",
+    "\n",
+    "# 1. Create a Pandas DataFrame with columns 'Date', 'Category', and 'Value'. Create a pivot table to compute the sum of 'Value' for each 'Category' by 'Date'.\n",
+    "date_range = pd.date_range(start='2025-07-01', periods=10, freq='D')\n",
+    "category = list('ABC')\n",
+    "data = {\n",
+    "    'Date': np.random.choice(date_range, size=20),\n",
+    "    'Category' : np.random.choice(category, size=20),\n",
+    "    'Value' : np.random.randint(1,100, size=20)\n",
+    "}\n",
+    "df_8_1 = pd.DataFrame(data)\n",
+    "pivot_table = pd.pivot_table(df_8_1, values='Value', index='Date', columns='Category', aggfunc='sum', fill_value=0)\n",
+    "# print('Original data \\n', df_8_1)\n",
+    "\n",
+    "print('Pivot table with sum of Category wise \\n',pivot_table)\n",
+    "# print(\"Sum Of value for each Category by Date \\n\", pd.)\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "b42f9512",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th>Quarter</th>\n",
+       "      <th>April - June</th>\n",
+       "      <th>Jan - March</th>\n",
+       "      <th>July - Sep</th>\n",
+       "      <th>Oct - Dec</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Year</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>2020</th>\n",
+       "      <td>228733035.0</td>\n",
+       "      <td>1.571977e+08</td>\n",
+       "      <td>95741964.0</td>\n",
+       "      <td>9.881554e+07</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2021</th>\n",
+       "      <td>110481765.0</td>\n",
+       "      <td>1.635143e+08</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.946403e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2022</th>\n",
+       "      <td>229285976.0</td>\n",
+       "      <td>1.337351e+07</td>\n",
+       "      <td>249062086.0</td>\n",
+       "      <td>2.778648e+08</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2023</th>\n",
+       "      <td>44605039.0</td>\n",
+       "      <td>1.069967e+08</td>\n",
+       "      <td>4408956.0</td>\n",
+       "      <td>1.491790e+08</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Quarter  April - June   Jan - March   July - Sep     Oct - Dec\n",
+       "Year                                                          \n",
+       "2020      228733035.0  1.571977e+08   95741964.0  9.881554e+07\n",
+       "2021      110481765.0  1.635143e+08          0.0  1.946403e+08\n",
+       "2022      229285976.0  1.337351e+07  249062086.0  2.778648e+08\n",
+       "2023       44605039.0  1.069967e+08    4408956.0  1.491790e+08"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 2. Create a Pandas DataFrame with columns 'Year', 'Quarter', and 'Revenue'. Create a pivot table to compute the mean 'Revenue' for each 'Quarter' by 'Year'.\n",
+    "years = [2020, 2021, 2022, 2023, 2023]\n",
+    "queater = ['Jan - March', 'April - June', 'July - Sep', 'Oct - Dec']\n",
+    "data_for_df = {\n",
+    "    'Year' : np.random.choice(years, size=25),\n",
+    "    'Quarter' : np.random.choice(queater, size=25),\n",
+    "    'Revenue' : np.random.randint(200000, 300000000, size= 25)\n",
+    "}\n",
+    "df_8_2 = pd.DataFrame(data_for_df)\n",
+    "pivot_table_8_2 = pd.pivot_table(df_8_2, values='Revenue', index='Year', columns='Quarter', aggfunc='mean', fill_value=0)\n",
+    "pivot_table_8_2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8ae05e69",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
